# berlin25-eurosat

./: .gitignore  CLUSTER_DEPLOYMENT.md  QUANTIZATION_COMPARISON.md  QUANTIZATION_README.md  analyze_results.py  compare_qat_vs_ptq.py  pyproject.toml  real_quantization_comparison.py  run_all_bitwidths.sh  run_quantization_experiments.py  submit_all_quantization.sh  submit_qat_vs_ptq.sh  submit_quantization_jobs.sh  submit_real_comparison.sh
eurosat/: client_app.py  quantization.py  server_app.py  task.py
