# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "berlin25-eurosat"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.23.0",
    "datasets>=2.14.6",
    "torch==2.7.1",
    "torchvision==0.22.1",
]

# Optional dependencies
[project.optional-dependencies]
logging = ["wandb==0.23.0"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "hackathon"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "eurosat.server_app:app"
clientapp = "eurosat.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-server-rounds = 5
fraction-train = 1.0
local-epochs = 2
lr = 0.001
batch-size = 64
quantization-bits = 32

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 10 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

# Cluster CPU federation
[tool.flwr.federations.cluster-cpu]
options.num-supernodes = 10

# Cluster GPU federation (AMD MI300X)
[tool.flwr.federations.cluster-gpu]
options.num-supernodes = 10

[tool.flwr.federations.supergrid-deployment]
address = "supergrid.flower.ai"
enable-account-auth = true
